# dda-py

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  USAGE_EXAMPLE.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
src/dda/: dda.py  utils.py
src/dda_py/: __init__.py  api.py  batch.py  bids.py  cli.py  dda.py  generated.py  model_encoding.py  plotting.py  results.py  runner.py  stats.py  structure_selection.py  utils.py  variants.py
tests/: conftest.py  test_api.py  test_batch.py  test_bids.py  test_binary_api_contract.py  test_conformance_contract.py  test_generated_api.py  test_julia_parity.py  test_model_encoding.py  test_output_file_created.py  test_plotting.py  test_results.py  test_stats.py  test_structure_selection.py  test_variants.py
