[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dda-py"
version = "0.3.0"
description = "Python bindings for DDA (Delay Differential Analysis)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Simon Draeger", email = "sdraeger@salk.edu" }]
keywords = [
    "dda",
    "delay-differential-analysis",
    "neuroscience",
    "signal-processing",
    "eeg",
    "neurophysiology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/sdraeger/dda-py"
Repository = "https://github.com/sdraeger/dda-py"
Issues = "https://github.com/sdraeger/dda-py/issues"

[project.optional-dependencies]
mne = ["mne>=1.0"]
pandas = ["pandas>=1.3"]
all = ["mne>=1.0", "pandas>=1.3"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "mne>=1.0", "pandas>=1.3"]

[project.scripts]
dda = "dda_py.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dda_py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
